Semana 02 Segundo avance del proyecto HTML. Cambiando botones de "next" y "back" y Prueba conexión a github

--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -10,6 +10,17 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         
     </head>
     <body>
+        <header>
+            <a href =' index.html'><h1>TechShop</h1></a>
+            <nav>
+                <a href=" ejemplo8.html">&LeftTriangle;</a>
+                <a href=" ejemplo3.html">&RightTriangle;</a>
+                <a href="#">Nosotros</a>
+                <a href="#">Tienda</a>
+                <a href="#">Reportes</a>
+
+            </nav>
+        </header>
         <div>
         <h1 style ="text-align: center; background-color: black; color: white">Ejemplo3</h1>
         <p>Bienvenidos a la página de la Tienda en linea </p>
