--- a/src/main/resources/static/ejemplo8.html
+++ b/src/main/resources/static/ejemplo8.html
@@ -5,6 +5,17 @@
         <meta charset="UTF-8">
     </head>
     <body>
+        <header>
+            <a href =' index.html'><h1>TechShop</h1></a>
+            <nav>
+                <a href=" ejemplo8.html">&LeftTriangle;</a>
+                <a href=" ejemplo3.html">&RightTriangle;</a>
+                <a href="#">Nosotros</a>
+                <a href="#">Tienda</a>
+                <a href="#">Reportes</a>
+
+            </nav>
+        </header>
         <h1>Ejemplo de imágenes</h1>
         <img src="images/marmota.jfif" alt="imagen de una marmota" width="500"/>
         <img src="images/tigre.jfif" alt="imagen de un tigre" width="500"/>
