--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <header>
             <a href =' index.html'><h1>TechShop</h1></a>
             <nav>
-                <a href=" ejemplo8.html">&triangleleft;</a>
+                <a href=" ejemplo8.html">&LeftTriangle;</a>
                 <a href=" ejemplo3.html">&RightTriangle;</a>
                 <a href="#">Nosotros</a>
                 <a href="#">Tienda</a>
