Semana 01 y 02 (final) En el commit anterior hubo uno equivocación, el archivo subido era la semana 01 junto con el progreso de la semana 2. En este commit finalizo la semana 2

--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -7,11 +7,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>Tienda en linea</title>
         <meta charset="UTF-8">
-        
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div>
-        <h1 style ="text-align: center; background-color: black; color: white">Ejemplo2</h1>
+        <h1>Ejemplo2</h1>
         <p>Bienvenidos a la página de la Tienda en linea </p>
         </div>
         
