--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
-
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header>
@@ -22,7 +22,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </nav>
         </header>
         <aside>
-            <h2>Últimas noticias</h2>
+            <h2 class="resaltado">Últimas noticias</h2>
             <p>Según el reporte de ventas que van del mes el XR - 128 es el más vendido, no se quede sin esta novedad </p> 
         </aside>
         <section>
@@ -47,6 +47,58 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <figcaption>$300 <a href="#">Add</a></figcaption>
                 <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, nec primis tellus aenean semper suspendisse etiam vitae, venenatis vestibulum leo metus nulla dictumst. Etiam convallis lobortis congue porta suscipit sapien lacinia tellus quis justo, mattis rhoncus senectus morbi donec urna dis ante nibh, bibendum eros litora hendrerit sem inceptos malesuada quam sodales. Et tempus ligula orci torquent pretium conubia ad, aptent sapien magna mus phasellus platea praesent, porttitor tristique maecenas id gravida nulla. Lobortis urna nunc velit porta quis proin eleifend non mus, ad aliquet odio tortor consequat accumsan mauris leo placerat primis, semper pellentesque egestas sagittis neque ornare hendrerit varius.</p>
         
+            </article>
+            <article>
+                <h2>Listado de Productos</h2>
+                <table border="0">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Código</th>
+                            <th>Precio</th>
+                            <th>Cantidad</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>XT-128</td>
+                            <td style="text-align: center">$35125</td>
+                            <td style="text-align: center">8</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>DT-582</td>
+                            <td style="text-align: center">$30012525</td>
+                            <td style="text-align: center">45</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>VIVO-X</td>
+                            <td style="text-align: center">$3002242</td>
+                            <td style="text-align: center">5</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>XT-128</td>
+                            <td style="text-align: center">$35125</td>
+                            <td style="text-align: center">8</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>DT-582</td>
+                            <td style="text-align: center">$30012525</td>
+                            <td style="text-align: center">45</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>VIVO-X</td>
+                            <td style="text-align: center">$3002242</td>
+                            <td style="text-align: center">5</td>
+                        </tr>
+                    </tbody>
+                </table>
+
             </article>
         </section>
         <footer>
