--- a/src/main/resources/static/ejemplo3.html
+++ b/src/main/resources/static/ejemplo3.html
@@ -7,7 +7,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
     <head>
         <title>Tienda en linea</title>
         <meta charset="UTF-8">
-        
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header>
@@ -22,7 +22,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </nav>
         </header>
         <div>
-        <h1 style ="text-align: center; background-color: black; color: white">Ejemplo3</h1>
+        <h1>Ejemplo3</h1>
         <p>Bienvenidos a la página de la Tienda en linea </p>
         </div>
         
