--- a/src/main/resources/static/ejemplo4.html
+++ b/src/main/resources/static/ejemplo4.html
@@ -5,6 +5,7 @@
         <title>Ejemplo 4</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <h1>Ejemplo de encabezados</h1>
