--- a/src/main/resources/static/ejemplo5.html
+++ b/src/main/resources/static/ejemplo5.html
@@ -8,6 +8,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>Ejemplo 5</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <h1>Ejemplos de formato de texto</h1>
