--- a/src/main/resources/static/ejemplo8.html
+++ b/src/main/resources/static/ejemplo8.html
@@ -3,6 +3,7 @@
     <head>
         <title>Ejemplo 8</title>
         <meta charset="UTF-8">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header>
