Semana 03 Inicio de la semana 3

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,9 +15,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <nav>
                 <a href=" ejemplo8.html">&LeftTriangle;</a>
                 <a href=" ejemplo3.html">&RightTriangle;</a>
-                <a href="#">Nosotros</a>
-                <a href="#">Tienda</a>
-                <a href="#">Reportes</a>
+                <a href="audios.html">Audios</a>
+                <a href="videos.html">Videos</a>
+                <a href="iframes.html">iframes</a>
+                <a href="formularios.html">Formularios</a>
 
             </nav>
         </header>
