--- a/src/main/resources/static/formularios.html
+++ b/src/main/resources/static/formularios.html
@@ -28,17 +28,42 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             <p>Según el reporte de ventas que van del mes el XR - 128 es el más vendido, no se quede sin esta novedad </p> 
         </aside>
         <section>
-            <h2>Ejemplos de audios</h2>
-            <article>
-                <h3>Musica Celta</h3>
-                <figure>
-                    <audio controls>
-                        <source src="audios/musica.mp3" type="audio/mpeg">
-                        Your browser does not support the <code>audio</code> tag.
-                    </audio>
-                </figure>
-                <hr>
-            </article>
+            <h2>Ejemplos de formularios</h2>
+            <form action="/usuario/registro"
+                  method="post">
+                <table border="1">
+                    <tbody>
+                        <tr>
+                            <td>Usuario</td>
+                            <td><input type="text"
+                                       required="true"
+                                       name="usuario" value="" size="25" /></td>
+                        </tr>
+                        <tr>
+                            <td>Clave</td>
+                            <td><input type="password" 
+                                       required="true"
+                                       name="clave" value="" size="15" /></td>
+                        </tr>
+                        <tr>
+                            <td>Nombre</td>
+                            <td><input type="text" required="true" name="nombre" value="" size="45" /></td>
+                        </tr>
+                        <tr>
+                            <td>Edad</td>
+                            <td><input type="number"
+                                       min="18"
+                                       max="25"
+                                       required="true" name="edad" value=""/></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td><input type="submit" required="true" value="Registrar" /></td>
+                        </tr>
+                    </tbody>
+                </table>
+
+            </form>
             
         </section>
         <footer>
