--- a/src/main/resources/static/videos.html
+++ b/src/main/resources/static/videos.html
@@ -30,12 +30,13 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <section>
             <h2>Ejemplos de audios</h2>
             <article>
-                <h3>Musica Celta</h3>
+                <h3>Un trailer</h3>
                 <figure>
-                    <audio controls>
-                        <source src="audios/musica.mp3" type="audio/mpeg">
-                        Your browser does not support the <code>audio</code> tag.
-                    </audio>
+                    
+                    <video width="320" height="240" controls autoplay muted poster="ïmg/torpedo.jpg">
+                        <source src="videos/torpedo.mp4" type="video/mp4">
+                        Your browser does not support the <code>video</code> tag.
+                    </video>
                 </figure>
                 <hr>
             </article>
