--- a/src/main/resources/static/videos.html
+++ b/src/main/resources/static/videos.html
@@ -34,7 +34,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <figure>
                     
                     <video width="320" height="240" controls autoplay muted poster="ïmg/torpedo.jpg">
-                        <source src="videos/torpedo.mp4" type="video/mp4">
+                        <source src="" type="video/mp4">
                         Your browser does not support the <code>video</code> tag.
                     </video>
                 </figure>
